Fix spacing in topic tab

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -290,19 +290,22 @@ main#main-content {
   font-weight: 700;
   list-style-type: none;
   padding-bottom: 30px;
-  margin-bottom: 0;
   margin-left: 30px;
+  margin-bottom: 0;
+  li {
+    margin-bottom: 10px;
+  }
   li::before {
     margin-left: -30px;
     content: '';
     display: inline-block;
     vertical-align: -11px;
     padding: 7px 20px 0 0;
-    height: 39px;
+    height: 20px;
     width: 10px;
     background-image: url('/public/images/arrow.svg');
     background-repeat: no-repeat;
-    background-position: 0 18px;
+    background-position: 0 0;
     background-size: 21px;
   }
 }
@@ -1070,6 +1073,10 @@ $wide-width: 1300px;
     }
     #xpl-frame2-topics li {
       max-height: 60px;
+    }
+
+    .xpl-topics-title {
+      padding-top: 10px;
     }
 
   }
